# static-site

./: .gitmodules  Cargo.toml  Makefile  README.md  askama.toml  website.yaml
private/content/: index.md
private/content/about/: index.md
private/content/posts/basic-language-identification/: index.md
private/content/posts/basic-web-app-with-rust/: index.md
private/content/posts/chance-corrected-agreement-measures/: index.md
private/content/posts/dropout-math-review/: index.md
private/content/posts/f1-score-as-a-measure-of-set-similarity/: index.md
private/content/posts/finite-state-optimality-theory-final-obstruent-devoicing/: index.md
private/content/posts/fretboard-diagram-creator/: index.md  modes.md
private/content/posts/graph-editor-demo/: index.md
private/content/posts/herschel-maxwell-derivation-of-the-normal-distribution/: index.md
private/content/posts/identifying-bigram-collocations/: index.md
private/content/posts/learning-russian-by-reading/: index.md
private/content/posts/minimalist-static-site-generator/: index.md
private/content/posts/top-down-parsing-as-graph-search/: config-tree.md  index.md
private/content/posts/vim-tmux-julia/: index.md
private/snips/: mathjax.html
private/static/: CNAME  robots.txt
private/static/css/: default.css  graph.css  top.css
private/static/fretboard-diagram-creator/: fretboard.css  fretboard.js
private/static/js/: config_dag.js  config_tree.js
private/templates/: default.html  footer.html  highlight.html  top-menu.html  top.html
src/: config.rs  index.rs  main.rs  page.rs  rss.rs
(+14 files in other folders)
