[package]
name = "page_generator"
version = "0.1.0"
authors = ["Tobias Kolditz <tbs.kldtz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
pulldown-cmark = "0.7"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"