[package]
authors = ["Tobias Kolditz <tbs.kldtz@gmail.com>"]
edition = "2018"
name = "page_generator"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
askama = {git = "https://github.com/djc/askama", branch = "main"}
chrono = {version = "0.4", features = ["serde"]}
glob = "0.3"
lazy_static = "1.4"
pulldown-cmark = "0.8"
regex = "1"
serde = {version = "1", features = ["derive"]}
serde_yaml = "0.8"
